Adds data and refines code a bit

--- a/src/pg_search/templates/book_yaml.j2
+++ b/src/pg_search/templates/book_yaml.j2
@@ -8,21 +8,21 @@
     book_id:
     title: >-
       {{ title }}
+    title_full: >-
     tags:
-      - Thriller
       - Mystery
-      - International
-      - Terrorism
-      - Gabriel Allon
+      - Thriller
+      - Historical
+      - England
     series_rank: {{ rank }}
     year: {{ year }}
   author:
-    author_id:
-    name_first: Daniel
-    name_last: Silva
-    year: 1960
+    author_id: 14
+    name_first: Jacqueline
+    name_last: Winspear
+    year: 1955
   event:
     event_id:
     book_id:
-    event: finished
-    created_at: {{ created_at }}
+    event: wished-for
+    created_at:
